Make gallery width smaller on tablets to avoid covering buybox

--- a/src/customizations/product-gallery/_product-gallery.scss
+++ b/src/customizations/product-gallery/_product-gallery.scss
@@ -27,6 +27,19 @@
             padding-right: 0;
         }
 
+        // Bundle products do not have sticky buybox and should have another layout.
+        // On tablet gallery covered buybox and as a result it was impossible to click at anything there.
+        // Code below should be reviewed during refactoring containers and pdp (PDP 2.0)
+        .page-product-bundle & {
+            @include media('>=tablet', '<laptop') {
+                width: 58%;
+                overflow: hidden;
+                margin: 0;
+                padding-left: 0;
+                padding-right: 0;
+            }
+        }
+
         .#{$namespace}container__main-column {
             @include media('>=laptop') {
                 width: auto;
